<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SleepingNow"
        android:id="@+id/sleepingNowButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:onClick="onSleepingNow" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JustWokeUp"
        android:id="@+id/wokeUpButton"
        android:layout_below="@+id/sleepingNowButton"
        android:layout_centerHorizontal="true"
        android:onClick="onJustWokeUp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        android:id="@+id/home"
        android:layout_below="@+id/wokeUpButton"
        android:layout_centerHorizontal="true"
        android:onClick="goHome" />
</RelativeLayout>
