<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.mum.hackathon.MainActivity"
    tools:showIn="@layout/content_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sleep"
        android:id="@+id/sleepButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:onClick="goToSleepPage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Meditation"
        android:id="@+id/meditationButton"
        android:layout_below="@+id/sleepButton"
        android:layout_centerHorizontal="true"
        android:onClick="goToMeditationPage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sync"
        android:id="@+id/syncButton"
        android:layout_below="@id/meditationButton"
        android:layout_centerHorizontal="true"
        android:onClick="onSync" />

</RelativeLayout>
